sample env.example commit